<resources>
    <string name="app_name">The Maze Runner</string>
    <string name="title_activity_kaart">Map</string>
    <string name="title_activity_login">The Maze Runner</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Wachtwoord</string>
    <string name="prompt_naam">Naam</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Inloggen</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="volgende_punt">Volgende punt:</string>
    <string name="_1254_meter">1254 meter</string>
    <string name="routes">Routes</string>
    <string name="textview">TextView</string>
    <string name="_2km">2km</string>
    <string name="_5km">5km</string>
    <string name="_10km">10km</string>
    <string name="_1km">1km</string>
    <string name="bekijk">Bekijk</string>
    <string name="title_activity_registreren">Registreren</string>
    <string name="title_activity_navigation_drawer">Kaart</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string-array name="routeNamen">
        <item>Route 1</item>
        <item>Route 2</item>
        <item>Route 3</item>
    </string-array>
    <string name="title_activity_help">help</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
