<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jan_c.themazerunner.RegistrerenActivity">
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <EditText
                    android:id="@+id/NaamEditText"
                    android:layout_width="242dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:layout_gravity="center"
                    android:hint="@string/prompt_naam"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:drawableLeft="@drawable/ic_person_black_24dp"
                    android:imeOptions="actionNext"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/EmailEditText"
                    android:layout_width="242dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:layout_gravity="center"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:drawableLeft="@drawable/ic_email_black_24dp"
                    android:imeOptions="actionNext"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/WachtwoordEditText"
                    android:layout_width="242dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:layout_gravity="center"
                    android:imeActionId="6"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:imeActionLabel="Registreren"
                    android:drawableLeft="@drawable/ic_lock_black_24dp"
                    android:imeOptions="actionUnspecified"/>
            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/RegistrerenButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:text="Registreren"
                android:background="@drawable/button"
                android:textColor="@color/white"/>
            <ProgressBar
                android:id="@+id/registreren_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="242dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:visibility="invisible" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
