<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    tools:context="com.example.jan_c.themazerunner.LoginActivity">


    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="0dp"
        android:layout_marginTop="48dp"
        tools:context="com.example.jan_c.themazerunner.Kaart" />

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/white">

        <TextView
            android:id="@+id/VolgendePuntTextview"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_alignBaseline="@+id/Pauzebutton"
            android:layout_alignBottom="@+id/Pauzebutton"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:text="@string/volgende_punt"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.055"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.794" />

        <Button
            android:id="@+id/Pauzebutton"
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="13dp"
            android:text="@string/bekijk"
            android:background="@drawable/button"
            android:textColor="@color/white"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.945"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.833" />

        <TextView
            android:id="@+id/afstandTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/VolgendePuntTextview"
            android:layout_alignBottom="@+id/VolgendePuntTextview"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/VolgendePuntTextview"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.051"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.835" />

    </RelativeLayout>

    <TextView
        android:id="@+id/timerTekst"
        android:layout_width="125dp"
        android:layout_height="45dp"
        android:layout_above="@+id/relativeLayout3"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="20dp"
        android:text="@string/textview"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.944" />

    <ProgressBar
        android:id="@+id/klassementProgressbar"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
        android:layout_width="111dp"
        android:layout_height="109dp"
        android:layout_centerInParent="true" />
</RelativeLayout >